--- a/reportal/static/css/style.css
+++ b/reportal/static/css/style.css
@@ -5,7 +5,12 @@ img {
   width: 100%; }
 
 .logo {
-  width: 80px; }
+  width: 180px;
+
+}
+.logo img{
+  Object-fit: cover;
+}
 
 .navbar {
   opacity: 0.9;
