--- a/reportal/static/css/style.css
+++ b/reportal/static/css/style.css
@@ -39,7 +39,7 @@ img {
     background: rgba(51, 51, 51, 0.8); }
 
 #services {
-  background: url(../img/building.jpg) no-repeat top center fixed;
+  background: url(../img/rbuilding.jpg) no-repeat top center fixed;
   min-height: 300px;
   position: relative;
   overflow: hidden; }
@@ -53,7 +53,7 @@ img {
     background: rgba(32, 134, 107, 0.8); }
 
 #showcase-inner {
-  background: url(../img/building.jpg) no-repeat top center fixed;
+  background: url(../img/rbuilding.jpg) no-repeat top center fixed;
   position: relative;
   overflow: hidden;
   min-height: 200px; }
