front-end updated

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -36,11 +36,11 @@
       <div class="row">
         <div class="col-md-8">
           <h2>We Search For The Perfect Home</h2>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+          <p class="lead">Learn about us!</p>
           <img src="{% static 'img/about.jpg' %}" alt="">
-          <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
-            neque quod accusamus rem quia magnam magni dolorum facilis ullam minima perferendis? Exercitationem at quaerat
-            commodi id libero eveniet harum perferendis laborum molestias quia.</p>
+          <p class="mt-4">Try your best choice all around country. We ensure both the quality and quantity of our properties.
+          The most experienced Realtor from the country, we hire to give the best chance to make your dream full-fill. Buy a property
+          and suggest your friends to make their wishes come true.</p>
         </div>
         <div class="col-md-4">
             {% if mvp_realtors %}
