--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -5,24 +5,23 @@
           <i class="fas fa-phone"></i> (018)-5053-8456
         </div>
         <div class="col-md-4">
-          <i class="fas fa-envelope-open"></i> contact@realestateportal.com
+          <i class="fas fa-envelope-open"></i> contact@facebook.com/binayakz
         </div>
         <div class="col-md-4">
           <div class="social text-right">
-            <a href="#">
-              <i class="fab fa-twitter"></i>
+            <a href="https://twitter.com/Binayakz">
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/binayakz">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/binayakz/">
               <i class="fab fa-linkedin"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/binayakz/">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-pinterest"></i>
+            <a href="https://github.com/binayakzz">
+              <i class="fab fa-github"></i>
             </a>
           </div>
         </div>
